/**
 * AElf Standards ACS6(Random Number Standard)
 *
 * Used to generate random number.
 */
syntax = "proto3";

package acs6;

import "aelf/options.proto";
import "aelf/core.proto";
import "google/protobuf/wrappers.proto";

option (aelf.identity) = "acs6";
option csharp_namespace = "AElf.Standards.ACS6";

service RandomNumberProviderContract {
    // Get random number according to block height.
    rpc GetRandomBytes (google.protobuf.BytesValue) returns (google.protobuf.BytesValue) {
        option (aelf.is_view) = true;
    }
}